# FRC-TagDetection

./: CMakeLists.txt  README.md  main.cpp
output/: nt_publisher.cpp  nt_publisher.h
pipeline/: camera_capture.cpp  camera_capture.h  pose_estimator.cpp  pose_estimator.h  tag_detector.cpp  tag_detector.h
